<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/city"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/city"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/degrees"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="170dp"
        android:text="@string/degrees"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/weather"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="230dp"
        android:text="@string/weather"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/high_to_low_degrees"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="270dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="350dp"
        android:background="@color/purple_900"
        android:contentDescription="TODO"
        app:srcCompat="@drawable/hourly_forecast" />

    <TextView
        android:id="@+id/time1"
        android:layout_width="45dp"
        android:layout_height="25dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="420dp"
        android:text="@string/time1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/time2"
        android:layout_width="45dp"
        android:layout_height="25dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="420dp"

        android:text="@string/time2"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/time3"
        android:layout_width="45dp"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="420dp"
        android:text="@string/time3"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/time4"
        android:layout_width="45dp"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="62dp"
        android:layout_marginTop="420dp"
        android:text="@string/time4"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/time5"
        android:layout_width="45dp"
        android:layout_height="25dp"
        android:layout_marginStart="292dp"
        android:layout_marginTop="420dp"
        android:text="@string/time5"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/future1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="480dp"
        android:text="@string/degrees1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/future2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="480dp"
        android:text="@string/degrees2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/future3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="480dp"
        android:text="@string/degrees3"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/future4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="231dp"
        android:layout_marginTop="480dp"
        android:text="@string/degrees4"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/future5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="290dp"
        android:layout_marginTop="480dp"
        android:text="@string/degrees4"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="11sp" />
    <TextView
        android:id="@+id/margines"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="540dp"
        android:text="The temperature prediction has an accuracy level of 90%"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</FrameLayout>